[package]
name = "chia-seeder-light"
version = "0.1.7"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
async-channel = "2.3.1"
async-trait = "0.1.83"
chia = "0.15.0"
chia-wallet-sdk = { version = "0.17.0", features = ["rustls"] }
clap = { version = "4.5.20", features = ["derive"] }
dashmap = "6.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
rand = "0.8.5"
tokio = "1.41.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trust-dns-server = "0.23.2"
