[package]
name = "chia-seeder-light"
version = "0.2.3"
edition = "2021"
authors = ["dns <dns@dexie.space>"]
description = "Super light chia peer crawler and DNS seeder"
license = "MIT"
homepage = "https://dexie.space/seeder"
repository = "https://github.com/dexie-space/chia-seeder-light"
keywords = ["chia", "blockchain", "crypto", "dns", "chia-wallet-sdk"]

[dependencies]
anyhow = "1.0.92"
async-channel = "2.3.1"
async-trait = "0.1.83"
chia = "0.15.0"
chia-protocol = "0.15.0"
chia-wallet-sdk = { version = "0.17.0", features = ["rustls"] }
clap = { version = "4.5.20", features = ["derive"] }
dashmap = "6.1.0"
futures = "0.3.31"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio = "1.41.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trust-dns-server = "0.23.2"
